--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -15,6 +15,13 @@ $mobile: '(max-width: 479)';
 
 
 // colors
+$c_primary:             #01a9e4;
+
+
+
+
+
+
 $c_border:              #01a9e4;
 
 $c_btn_back:            #d4f0fa;
