--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -10,9 +10,9 @@
 }
 
 .search_content {
-    border-bottom: 1px solid $c_search_bg;
-    border-left: 1px solid $c_search_bg;
-    border-right: 1px solid $c_search_bg;
+    border-bottom: 1px solid $c_border;
+    border-left: 1px solid $c_border;
+    border-right: 1px solid $c_border;
     min-height: 500px;
     width: 100%;
 }
