--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -15,48 +15,26 @@ $mobile:        'only screen and (max-width: 479px)';
 
 
 // colors
+//$c_secondary:           #01a9e4;
+
+$c_border:              #dee2e6;
 $c_primary:             #01a9e4;
+$c_special:            #48ca87;
 
+//$c_link:                #239ee1;
 
-
-
-
-
-$c_border:              #01a9e4;
-
-$c_btn_back:            #d4f0fa;
 
 $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
 $c_btn_gradient_3:      #55d074;
 
-$c_elements_bg:         #01a9e4;
-
 $c_input_border:        #a19f99;
-
-
 
 $c_link:                #239ee1;
 $c_link_additional:     #0bb65e;
-$c_link_dark:           #3c4858;
-
-$c_main:                #777;
-
-$c_pagination:          #1f2d3d;
-
-$c_popup_bg_primary:    #fff;
-$c_popup_bg_secondary:  #01a9e4;
+$c_text_dark:           #3c4858;
 
 $c_popup_menu_hover:    #e6f6fc;
-
-$c_special_blue:        #01a9e4;
-$c_special_green:       #48ca87;
-$c_search_bg:           #dee2e6;
-
-$c_text_dark:           #3c4858;
-$c_text_main:           #000;
-$c_text_special:        #01a9e4;
-
 
 
 // link to images folder
