--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -76,8 +76,8 @@
   }
 
   &:hover {
-    background-color: $c_special_blue;
-    border: 1px solid $c_special_blue;
+    background-color: $c_primary;
+    border: 1px solid $c_primary;
   }
 
   &:active {
@@ -85,7 +85,7 @@
 
     &::after,
     &::before {
-      background-color: $c_special_blue;
+      background-color: $c_primary;
     }
   }
 }
@@ -93,7 +93,7 @@
 
 
 .popup_lang_n_cur {
-  background-color: $c_popup_bg_secondary;
+  background-color: $c_primary;
   border-radius: 10px 0 10px 10px;
   padding: 30px 0 14px;
   position: absolute;
