--- a/src/styles/take.scss
+++ b/src/styles/take.scss
@@ -36,7 +36,7 @@
 .take_destinations__select {}
 
 .take_destinations__title {
-  color: $c_border;
+  color: $c_primary;
   font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
@@ -64,7 +64,7 @@
 
 // take_menu [START]
 .take_menu {
-  border: 1px solid $c_border;
+  border: 1px solid $c_primary;
   border-radius: 6px;
   display: flex;
   flex-wrap: wrap;
@@ -90,7 +90,7 @@
   position: relative;
 
   &::after {
-    background-color: $c_border;
+    background-color: $c_primary;
     border-radius: 6px 6px 0 0;
     bottom: 0;
     content: "";
@@ -103,7 +103,7 @@
   }
 
   &::before {
-    background-color: $c_link_dark;
+    background-color: $c_text_dark;
     content: "";
     height: 32px;
     position: absolute;
@@ -112,11 +112,11 @@
   }
 
   &:hover {
-    color: $c_border;
+    color: $c_primary;
   }
 
   &.active {
-    color: $c_border;
+    color: $c_primary;
     position: relative;
 
     &::after {
@@ -197,7 +197,7 @@
   margin: 0 32px 0 0;
 
   span {
-    color: $c_border;
+    color: $c_primary;
   }
 }
 
@@ -225,7 +225,7 @@
 
 .take_results_item__list {
   span {
-    color: $c_border;
+    color: $c_primary;
   }
 }
 
