--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -36,15 +36,15 @@
 
   &:hover {
     background: #fff;
-    border: 1px solid $c_special_blue;
-    color: $c_special_blue !important;
+    border: 1px solid $c_primary;
+    color: $c_primary !important;
   }
 }
 
 .btn_empty,
 .btn_empty:visited {
-  border: 1px solid $c_special_blue;
-  color: $c_special_blue;
+  border: 1px solid $c_primary;
+  color: $c_primary;
 
   &:hover {
     background:linear-gradient(138deg, #00A8E4 74.4%, #00A7E5 74.41%, #55D074 120.36%);
@@ -92,10 +92,10 @@
 
 .btn_more,
 .btn_more:visited {
-  background-color: rgba($c_border, .17);
+  background-color: rgba($c_primary, .17);
 
   &:hover {
-    background-color: $c_border;
+    background-color: $c_primary;
   }
 }
 
@@ -141,8 +141,8 @@
 
 .btn_submit,
 .btn_submit:visited   {
-  border: 1px solid $c_border;
-  color: $c_border;
+  border: 1px solid $c_primary;
+  color: $c_primary;
   font-size: 20px;
   line-height: 1.3;
   padding: 16px 96px;
@@ -195,9 +195,9 @@
 
 
 
-.link_blue,
-.link_blue:visited {
-  color: $c_special_blue;
+.link_primary,
+.link_primary:visited {
+  color: $c_primary;
   font-size: 24px;
 
   &:hover {
@@ -207,7 +207,7 @@
 
 .link_dark,
 .link_dark:visited {
-  color: $c_link_dark;
+  color: $c_text_dark;
 
   &:hover {
     text-decoration: none;
@@ -217,7 +217,7 @@
 .link_back,
 .link_back:visited {
   background: url(#{$i}/icons/link_back.svg) 0 0 no-repeat scroll transparent;
-  color: $c_link_dark;
+  color: $c_text_dark;
   font-size: 15px;
   left: 0;
   min-height: 31px;
