--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -8,7 +8,7 @@ body {
 
       &.btn_more,
       &.btn_more:visited {
-        color: $c_link_dark;
+        color: $c_text_dark;
 
         &:hover {
           color: #fff;
@@ -108,7 +108,7 @@ body {
 
     .v-input--checkbox {
       .v-label {
-        color: $c_text_main;
+        color: #000;
         font-size: 14px;
         line-height: 1.5;
       }
