--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -65,11 +65,22 @@ body {
       letter-spacing: 0;
       text-align: center;
       text-decoration: none;
-      text-transform: none;
+      text-transform: capitalize;
       transition: $transition;
+
+      &:before {
+        background-color: transparent;
+      }
+
 
       &.v-btn--contained {
         box-shadow: none;
+      }
+
+      &.v-size--default {
+        font-size: 20px;
+        height: 55px;
+        padding: 0 70px;
       }
 
       &.v-size--small {
@@ -77,7 +88,33 @@ body {
         height: 37px;
         padding: 0 39px;
       }
+
+      &.primary {
+        border: 1px solid transparent !important;
+        background: linear-gradient(138deg, #00A8E4 74.4%, #00A7E5 74.41%, #55D074 120.36%);
+        background-color: transparent !important;
+        color: #fff !important;
+
+        &:hover {
+          background: transparent !important;
+          border: 1px solid $c_primary !important;
+          color: $c_primary !important;
+        }
+      }
+
+      &.secondary {
+        background-color: transparent !important;
+        border-color: $c_primary !important;
+        color: $c_primary !important;
+
+        &:hover {
+          background: linear-gradient(137.73deg, $c_btn_gradient_1 52.21%, $c_btn_gradient_2 52.22%, $c_btn_gradient_3 105.02%);
+          border-color: transparent !important;
+          color: #fff !important;
+        }
+      }
     }
+
 
 
 
@@ -273,7 +310,6 @@ body {
         }
       }
     }
-
 
 
     @media #{$mobile} {
