--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -298,6 +298,7 @@
 }
 
 .home_intro_text {
+  align-items: flex-start;
   color: $c_text_dark;
   display: flex;
   flex-direction: column;
@@ -316,7 +317,7 @@
     letter-spacing: -0.024em;
   }
 
-  span {
+  > span {
     font-size: 22px;
     line-height: 1.3;
     letter-spacing: 0.0045em;
@@ -348,7 +349,7 @@
       width: 100%;
     }
 
-    span {
+    > span {
       font-size: 17px;
       padding: 0 0 50px;
     }
