--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -7,14 +7,12 @@ footer {}
 
 
 h1 {
-  //color: $c_link;
   color: #000;
   font-size: 53px;
-  line-height: 88.6%;
-  //padding: 1em 0;
+  font-weight: 700;
+  line-height: 1.1;
   text-align: left;
   letter-spacing: -0.024em;
-  //text-transform: uppercase;
 }
 
 h2 {
