--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -37,12 +37,14 @@ $c_text_dark:           #3c4858;
 $c_popup_menu_hover:    #e6f6fc;
 
 
+
 // link to images folder
 $i:                     'assets/i';
 
 
 
 // fonts
+$font_helvetica:        'HelveticaNeueCyr',     Arial, Helvetica, sans-serif;
 $font_main:             'HelveticaNeueCyr',     Arial, Helvetica, sans-serif;
 $font_roboto:           'Roboto',               Arial, Helvetica, sans-serif;
 
@@ -53,30 +55,17 @@ $transition:            all .3s ease-in-out;
 
 
 // HelveticaNeueCyr-Bold
-//@font-face {
-//  font-family: 'HelveticaNeueCyr';
-//  src: url('assets/fonts/HelveticaNeueCyr-Bold.eot');
-//  src: local('HelveticaNeueCyr-Bold'),
-//  url('assets/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
-//  url('assets/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
-//  url('assets/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
-//  url('assets/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
-//  font-weight: 700;
-//  font-style: normal;
-//}
-
-// HelveticaNeueCyr-Light
-//@font-face {
-//  font-family: 'HelveticaNeueCyr';
-//  src: url('assets/fonts/HelveticaNeueCyr-Light.eot');
-//  src: local('HelveticaNeueCyr-Light'),
-//  url('assets/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
-//  url('assets/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
-//  url('assets/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
-//  url('assets/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
-//  font-weight: 300;
-//  font-style: normal;
-//}
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('assets/fonts/HelveticaNeueCyr-Bold.eot');
+  src: local('HelveticaNeueCyr-Bold'),
+  url('assets/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
+  url('assets/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
+  url('assets/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+  url('assets/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
 
 // HelveticaNeueCyr-Roman
 @font-face {
@@ -91,6 +80,47 @@ $transition:            all .3s ease-in-out;
   font-style: normal;
 }
 
+// HelveticaNeueCyr-Light
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('assets/fonts/HelveticaNeueCyr-Light.eot');
+  src: local('HelveticaNeueCyr-Light'),
+  url('assets/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
+  url('assets/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
+  url('assets/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
+  url('assets/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+// HelveticaNeueCyr-LightItalic
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('assets/fonts/HelveticaNeueCyr-LightItalic.eot');
+  src: local('HelveticaNeueCyr-LightItalic'),
+  url('assets/fonts/HelveticaNeueCyr-LightItalic.eot?#iefix') format('embedded-opentype'),
+  url('assets/fonts/HelveticaNeueCyr-LightItalic.woff2') format('woff2'),
+  url('assets/fonts/HelveticaNeueCyr-LightItalic.woff') format('woff'),
+  url('assets/fonts/HelveticaNeueCyr-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+// HelveticaNeueCyr-Medium
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('assets/fonts/HelveticaNeueCyr-Medium.eot');
+  src: local('HelveticaNeueCyr-Medium'),
+  url('assets/fonts/HelveticaNeueCyr-Medium.eot?#iefix') format('embedded-opentype'),
+  url('assets/fonts/HelveticaNeueCyr-Medium.woff2') format('woff2'),
+  url('assets/fonts/HelveticaNeueCyr-Medium.woff') format('woff'),
+  url('assets/fonts/HelveticaNeueCyr-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+
 // Icon-fonts
 @font-face {
 	font-family: 'icomoon';
@@ -103,3 +133,5 @@ $transition:            all .3s ease-in-out;
 	font-style: normal;
 	font-display: block;
 }
+
+
