15,6 | Message Page + Popups

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -13,6 +13,7 @@
 @import 'footer';
 @import 'header';
 @import 'home';
+@import 'my_messages';
 @import 'parcel_overview';
 @import 'popups';
 @import 'popup_menu';
