--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -300,7 +300,8 @@
     }
   }
 
-  &__text {
+  &__text   {
+    align-items: flex-start;
     color: $c_text_dark;
     display: flex;
     flex-direction: column;
@@ -319,7 +320,7 @@
       letter-spacing: -0.024em;
     }
 
-    span {
+    > span {
       font-size: 22px;
       line-height: 1.3;
       letter-spacing: 0.0045em;
@@ -348,7 +349,7 @@
         width: 100%;
       }
 
-      span {
+      > span {
         font-size: 17px;
         padding: 0 0 50px;
       }
@@ -376,7 +377,7 @@
         width: 100%;
       }
 
-      span {
+      > span {
         text-align: center;
         padding: 0 0 48px;
       }
@@ -394,7 +395,7 @@
         padding: 18px 0;
       }
 
-      span {
+      > span {
         font-size: 20px;
         line-height: 24px;
       }
@@ -417,7 +418,7 @@
         max-width: 100%;
       }
 
-      span {
+      > span {
         font-size: 17px;
         line-height: 1.2;
       }
