--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -121,7 +121,6 @@ body {
 
 
 
-
     .v-card {
       div {
         border-radius: 14px;
@@ -130,23 +129,24 @@ body {
       > *:last-child:not(.v-chip) {
         border-radius: 14px;
       }
+
+      &__subtitle {
+        //color: $c_;
+        text-align: center;
+        line-height: 32px;
+        font-size: 17px;
+        padding: 0 0 20px;
+      }
+
+      &__title {
+        font-size: 24px;
+        font-weight: 600;
+        justify-content: center;
+        margin: 0 auto  ;
+        line-height: 1.4;
+      }
     }
 
-    .v-card__title {
-      font-size: 24px;
-      font-weight: 600;
-      justify-content: center;
-      margin: 0 auto  ;
-      line-height: 1.4;
-    }
-
-    .v-card__subtitle {
-      //color: $c_;
-      text-align: center;
-      line-height: 32px;
-      font-size: 17px;
-      padding: 0 0 20px;
-    }
 
 
     .v-input--checkbox {
@@ -317,9 +317,42 @@ body {
     }
 
 
+
+    .account_info {
+      p {
+        margin: 0 0 20px;
+        
+        @media #{$desktop} {
+          margin: 0 0 25px;
+        }
+      }
+    }
+
+    .submenu {
+      a,
+      a:visited {
+        color: $c_input_border;
+
+        &:hover {
+          color: $c_primary;
+        }
+      }
+
+      &__item {
+        &.active {
+          a,
+          a:visited {
+            color: $c_primary;
+          }
+        }
+      }
+    }
+
     @media #{$mobile} {
-      .v-card__title {
-        font-size: 16px;
+      .v-card {
+        &__title {
+          font-size: 16px;
+        }
       }
     }
   }
