--- a/src/styles/my_messages.scss
+++ b/src/styles/my_messages.scss
@@ -13,15 +13,15 @@
   line-height: 1.5;
 }
 
-.lk_messages {
+.messages {
   z-index: 0;
 }
 
-.lk_messages_items {
+.messages_items {
   margin: 47px 0 0 ;
 }
 
-.lk_messages_item  {
+.messages_item  {
   border-bottom: 1px solid #A19F99 ;
   cursor: pointer;
   display: flex;
@@ -29,17 +29,17 @@
   justify-content: space-between;
   padding: 47px 70px 45px 35px;
   transition: all 0.3s;
-}
 
-.lk_messages_item:hover {
-  background-color: #D4EFFC;
+  &:hover {
+    background-color: #D4EFFC;
 
-  .lk_massages_btn_wrap {
-    display: block;
+    .messages_btn_wrap {
+      display: block;
+    }
   }
 }
 
-.lk_massages_btn_wrap {
+.messages_btn_wrap {
   display: none;
 }
 
@@ -78,22 +78,33 @@
 }
 
 
-@media only screen and (max-width: 960px) {
-  .lk_massages_btn_wrap  {
+@media #{$tablet_l} {
+  .messages_btn_wrap  {
     display: none;
   }
+
   .name {
     font-size: 20px;
   }
+
   .name_info {
     font-size: 15px;
   }
+
   .photo {
     max-width: 80px;
   }
-  .lk_messages_item {
+
+  .messages_item {
     padding-left: 43px;
+
+    &:hover {
+      .messages_btn_wrap {
+        display: none;
+      }
+    }
   }
+
   .counter {
     font-size: 14px;
     height: 25px;
@@ -101,8 +112,8 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
-  .lk_messages_item {
+@media #{$mobile} {
+  .messages_item {
     padding-left: 18px;
   }
   .name {
