--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -4,14 +4,11 @@
 .popup {
   background-color: #fff;
   border-radius: 14px;
-  left: 50%;
   padding: 70px;
-  position: fixed;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   z-index: 99;
 
-  h3 {
+  h1 {
     font-size: 24px;
     padding: 0 0 20px;
   }
@@ -125,6 +122,15 @@
 
 
 
+.popup_description {
+  font-size: 16px;
+  font-style: italic;
+  letter-spacing: 0.004em;
+  line-height: 1.2;
+}
+
+
+
 .popup_lang_n_cur {
   background-color: $c_primary;
   border-radius: 10px 0 10px 10px;
@@ -213,7 +219,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  width: 418px;
+  max-width: 560px;
+  width: 100%;
 }
 
 
@@ -233,6 +240,13 @@
   }
 }
 
+
+.popup_title {
+  color: $c_primary;
+  font-size: 20px;
+  font-weight: 600;
+  width: 100%;
+}
 
 
 .popup_send_or_grab {}
@@ -256,16 +270,43 @@
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  width: 954px;
+  max-width: 954px;
+  width: 100%;
 }
 
-.popup_two_columns__wrap {
+.popup_two_columns__one {
+  margin: 0 auto;
+  max-width: 420px;
+  width: 100%;
+}
+
+.popup_two_columns__two {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
-  span {
-    color: $c_primary;
-    font-size: 20px;
+  >div {
+    width: 48%;
+  }
+}
+
+.popup_two_columns__three {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  >div {
+    width: 31.5%;
+  }
+}
+
+.popup_two_columns__four {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  >div {
+    width: 24%;
   }
 }
 
