--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -327,6 +327,14 @@ ul {
     text-decoration: none;
     transition: $transition;
 
+    &.router-link-exact-active {
+      color: $c_primary;
+
+      &::after {
+        display: block;
+      }
+    }
+
     &::after {
       background-color: $c_primary;
       content: "";
@@ -341,19 +349,6 @@ ul {
 
     &:hover {
       color: $c_primary;
-    }
-  }
-
-  &__item {
-    &.active {
-      a,
-      a:visited {
-        color: $c_primary;
-
-        &::after {
-          display: block;
-        }
-      }
     }
   }
 
@@ -376,12 +371,8 @@ ul {
   }
 
   @media #{$mobile} {
+    font-size: 13px;
     margin: 14px 0;
-
-    a,
-    a:visited {
-      font-size: 13px;
-    }
   }
 }
 
