--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -19,6 +19,7 @@
 @import 'parcel_overview';
 @import 'popups';
 @import 'popup_menu';
+@import 'rules';
 @import 'send';
 @import 'search';
 @import 'take';
