21 | Rules. Aside menu as app.

--- a/src/styles/rules.scss
+++ b/src/styles/rules.scss
@@ -30,17 +30,12 @@
 
     a,
     a:visited {
-      color: $c_text_dark;
       display: inline-block;
       text-decoration: none;
       transition: $transition;
 
-      &.active {
+      &.router-link-exact-active {
         font-weight: 700;
-      }
-
-      &:hover {
-        color: $c_primary;
       }
     }
 
