6 | popup + ui styles

--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -243,8 +243,10 @@
 
 .popup_title {
   color: $c_primary;
+  display: block;
   font-size: 20px;
   font-weight: 600;
+  margin: 0 0 12px;
   width: 100%;
 }
 
@@ -270,7 +272,9 @@
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 954px;
+  margin: 100px 0;
+  max-width: 1095px;
+  padding: 88px 104px;
   width: 100%;
 }
 
@@ -284,9 +288,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 0 40px;
 
   >div {
-    width: 48%;
+    width: 47.5%;
   }
 }
 
@@ -294,6 +299,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 0 40px;
 
   >div {
     width: 31.5%;
@@ -304,9 +310,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 0 40px;
 
   >div {
-    width: 24%;
+    width: 23%;
   }
 }
 
