--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -54,6 +54,34 @@ body {
       }
     }
 
+    .input_n_select_wrap {
+      display: flex;
+      justify-content: flex-start;
+
+      .v-input {
+        input {
+          border: 1px solid $c_border;
+          border-radius: 4px;
+        }
+
+        &.v-text-field {
+          flex-grow: 0;
+          margin: 0 22px 0 0;
+          width: 205px;
+        }
+
+        &.v-select {
+          flex-grow: 0;
+          width: 124px;
+
+          .v-select__selection {
+            margin: 0 0 0 18px;
+            position: absolute;
+          }
+        }
+      }
+    }
+
     .v-btn,
     .v-btn:visited {
       align-items: center;
@@ -119,6 +147,17 @@ body {
       }
     }
 
+    .v-select.v-text-field--outlined:not(.v-text-field--single-line) {
+      .v-select__selections {
+        padding: 0;
+      }
+    }
+
+    .v-text-field--outlined {
+      fieldset {
+        top: 0;
+      }
+    }
 
 
     .v-card {
@@ -128,6 +167,7 @@ body {
       height: 100%;
       justify-content: center;
       left: 0;
+      overflow: auto;
       position: fixed;
       top: 0;
       width: 100%;
@@ -151,13 +191,13 @@ body {
 
       &__title {
         font-size: 24px;
-        font-weight: 600;
+        font-weight: 500;
         justify-content: center;
-        margin: 0 auto  ;
+        margin: 0 auto 30px;
         line-height: 1.4;
+        text-align: center;
       }
     }
-
 
 
     .v-input--checkbox {
@@ -299,21 +339,105 @@ body {
       }
     }
 
-    .v-text-field {
+    .v-input.v-textarea {
+      .v-input__control {
+        .v-text-field__details {
+          display: flex;
+          padding: 0 5px;
+
+          .v-counter {
+            font-size: 17px;
+            height: 14px;
+            margin: 1px 0;
+            line-height: 17px;
+            font-style: italic;
+          }
+        }
+
+        .v-input__slot {
+          margin-bottom: 9px;
+        }
+      }
+    }
+
+    .v-input--radio-group {
+      margin: 0;
+      padding: 0;
+    }
+
+    .v-input__control {
       .v-input__slot {
-        .v-label {
-          top: 18px;
-          padding: 0 18px;
+        .v-radio {
+          margin: 0 40px 0 0;
+
+          .mdi-radiobox-blank {
+            &:before {
+              content: " ";
+              background: url(#{$i}/icons/radio.svg) center center no-repeat scroll transparent;
+              height: 31px;
+              width: 31px;
+            }
+          }
+
+          .mdi-radiobox-marked {
+            &:before {
+              content: " ";
+              background: url(#{$i}/icons/radio_active.svg) center center no-repeat scroll transparent;
+              height: 31px;
+              width: 31px;
+            }
+          }
+
+          .v-input--selection-controls__input {
+            height: 31px;
+            margin: 0 16px 0 0;
+            width: 31px;
+
+            .v-input--selection-controls__ripple {
+              left: -9px;
+            }
+          }
+
+          .v-label {
+            top: 0;
+            transform: translate(0,0);
+          }
+        }
+      }
+    }
+
+    .v-text-field {
+      margin-top: 0;
+      padding-top: 0;
+
+      .v-input__slot {
+        padding: 0;
+
+        fieldset {
+          legend {
+            display: none;
+          }
         }
 
-        .v-label--active {
-          top: 8px;
-        }
+        .v-text-field__slot {}
 
-        .v-text-field__slot {
-          input {
-            padding: 16px 18px;
-            max-height: 59px;
+        .v-select__slot {
+          .v-input__append-inner {
+            position: absolute;
+            right: 17px;
+            top: 50%;
+            transform: translateY(-50%);
+            margin-top: 0;
+
+            .mdi-menu-down {
+              &:before {
+                //background-color: red;
+                content: " ";
+                background: url(#{$i}/icons/select.svg) 0 0 no-repeat scroll transparent;
+                height: 20px;
+                width: 20px;
+              }
+            }
           }
         }
 
@@ -324,10 +448,54 @@ body {
         &:before {
           display: none;
         }
+
+        input {
+          color: $c_text_dark;
+          padding: 24px 18px 18px;
+          max-height: 60px;
+        }
+
+        textarea {
+          border: 1px solid $c_input_border;
+          border-radius: 4px;
+          color: $c_text_dark;
+          font-size: 16px;
+          font-style: italic;
+          line-height: 1.4;
+          padding: 28px 28px 48px;
+        }
+      }
+
+      .v-input__control {
+        .v-input__slot {
+          margin-bottom: 19px;
+        }
+
+        .v-text-field__details {
+          display: none;
+        }
+      }
+
+      .v-label--active {
+        color: $c_text_dark !important;
+        transform: translate(60px,0);
+        opacity: 0;
       }
     }
 
+    .v-text-field.v-text-field--enclosed:not(.v-text-field--rounded) > .v-input__control > .v-input__slot, .v-text-field.v-text-field--enclosed .v-text-field__details {
+      padding: 0;
+    }
 
+    .v-label {
+      top: 22px;
+      transition: $transition;
+      transform: translate(20px,0);
+    }
+
+    .v-label--active {
+      top: 22px;
+    }
 
     .account_info {
       p {
@@ -531,17 +699,6 @@ body {
   @media #{$tablet_l} {
     font-size: 0;
     padding: 0;
-  }
-}
-
-
-
-.mdi {
-  &::before {
-    background: url(#{$i}/icons/select.svg) 0 0 no-repeat scroll transparent;
-    font-size: 0;
-    height: 20px;
-    width: 20px;
   }
 }
 
