--- a/src/styles/rules.scss
+++ b/src/styles/rules.scss
@@ -24,7 +24,8 @@
   }
 
   @media #{$desktop} {
-    padding: 56px 40px 100px;
+    padding-left: 40px;
+    padding-right: 40px;
 
     h2 {
       font-size: 28px;
@@ -36,6 +37,10 @@
   }
 
   @media #{$tablet_l} {
+    h2 {
+      font-size: 22px;
+    }
+
     &__content {
       font-size: 17px;
     }
@@ -43,10 +48,12 @@
 
   @media #{$tablet_m} {
     flex-wrap: wrap;
+    padding-left: 30px;
+    padding-right: 30px;
 
     &__content {
       font-size: 22px;
-      padding: 0;
+      padding: 0 22px;
       width: 100%;
     }
   }
@@ -62,22 +69,49 @@
   flex-basis: 240px;
   flex-shrink: 0;
   font-size: 22px;
+  position: relative;
+
+  &.active {
+    .rules_menu__mobile_toggle {
+      border-radius: 6px 6px 0 0;
+
+      &::after {
+        transform: rotate(180deg);
+      }
+    }
+  }
 
   &__list {}
 
   &__mobile_toggle {
-    > div {
-      display: none;
+    border: 1px solid $c_text_dark;
+    border-radius: 6px;
+    cursor: pointer;
+    display: none;
+    font-size: 17px;
+    font-weight: 300;
+    margin: 0 0 -1px;
+    padding: 17px 40px 15px 20px;
+    transition: $transition;
 
-      &.router-link-exact-active {
-        display: block;
-      }
+    &::after {
+      background: url(#{$i}/icons/select.svg) 0 0 no-repeat scroll transparent;
+      background-size: contain;
+      content: "";
+      height: 20px;
+      position: absolute;
+      right: 17px;
+      top: 20px;
+      transition: $transition;
+      width: 21px;
+      z-index: 3;
     }
   }
 
   a,
   a:visited {
     display: inline-block;
+    padding: 0 0 20px;
     text-decoration: none;
     transition: $transition;
 
@@ -88,7 +122,6 @@
 
   li {
     display: block;
-    margin: 0 0 20px;
   }
 
   @media #{$desktop} {
@@ -97,7 +130,50 @@
 
   @media #{$tablet_m} {
     flex-basis: auto;
+    margin: 0 0 28px;
     width: 100%;
+
+    a,
+    a:visited {
+      display: block;
+      padding: 12px 20px;
+
+      &:hover {
+        background-color: $c_primary;
+      }
+    }
+
+    li {
+      &:hover {
+        background-color: $c_primary;
+      }
+    }
+
+    &.active {
+      .rules_menu__list {
+        display: block;
+      }
+    }
+
+    &__list {
+      background-color: #fff;
+      border: 1px solid $c_text_dark;
+      border-radius: 0 0 6px 6px;
+      display: none;
+      left: 0;
+      position: absolute;
+      top: 100%;
+      width: 100%;
+      z-index: 3;
+
+      .router-link-exact-active {
+        display: none;
+      }
+    }
+
+    &__mobile_toggle {
+      display: block;
+    }
   }
 }
 
