--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -221,6 +221,12 @@
   flex-direction: column;
   max-width: 560px;
   width: 100%;
+
+  form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 
@@ -269,12 +275,22 @@
 
 .popup_two_columns {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  margin: 100px 0;
+  max-height: 90%;
   max-width: 1095px;
+  overflow: auto;
   padding: 88px 104px;
+  width: 100%;
+
+  @media #{$tablet_l} {
+    padding: 60px;
+    max-width: 557px;
+  }
+}
+
+.popup_two_columns__block {
+  margin: 0 0 40px;
   width: 100%;
 }
 
@@ -293,6 +309,16 @@
   >div {
     width: 47.5%;
   }
+
+  @media #{$tablet_l} {
+    >div {
+      width: 100%;
+
+      &:first-child {
+        margin: 0 0 10px;
+      }
+    }
+  }
 }
 
 .popup_two_columns__three {
@@ -304,6 +330,12 @@
   >div {
     width: 31.5%;
   }
+
+  @media #{$tablet_l} {
+    >div {
+      width: 100%;
+    }
+  }
 }
 
 .popup_two_columns__four {
@@ -314,6 +346,12 @@
 
   >div {
     width: 23%;
+  }
+
+  @media #{$tablet_l} {
+    >div {
+      width: 100%;
+    }
   }
 }
 
